# gumbo_query_ex

./: .gitignore  .gitmodules  README.md  clean.sh  compile.sh  mix.exs  test.sh
bench/: file_sizes_bench.exs
bench/cnode/: file_sizes_bench.exs
config/: config.exs
cpp_src/example_client/: CMakeLists.txt  example_client.c
cpp_src/gumbo_query_client/: CMakeLists.txt  gumbo_query.cpp  gumbo_query.h  gumbo_query_client.cpp
lib/: gumbo_query_ex.ex
test/: distributed_test.exs  example_client_test.exs  gumbo_query_client_test.exs  gumbo_query_ex_test.exs
test/fixtures/: lorem_ipsum.html
